[html] 메뉴 아이콘 추가

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
 #checkbox {
     display: none;
 }
+.menu-btt {
+    font-size: 2rem;
+    font-weight: 700;
+}
 #checkbox:checked + .menu-btt{
-    
+
 }
