--- a/style.css
+++ b/style.css
@@ -9,7 +9,13 @@ body {
 .menu-btt {
     font-size: 2rem;
     font-weight: 700;
+    position: relative;
+    top: 30px;
+    left: 30px;
 }
-#checkbox:checked + .menu-btt{
-
+.material-icons {
+    font-size: 1.5rem;
+}
+#checkbox:checked ~ .menu-btt{
+    color: red;
 }
