--- a/style.css
+++ b/style.css
@@ -3,28 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
-#checkbox {
-    display: none;
-}
-.menu-btt {
-    font-size: 2rem;
-    font-weight: 700;
+label {
+    display: flex;
+    align-items: center;
     position: relative;
     top: 30px;
     left: 30px;
-    z-index: 1;
 }
 .material-icons {
-    font-size: 1.5rem;
+    font-size: 3rem;
+    margin-right: 10px;
 }
-#checkbox:checked ~ section{
-    left: 0;
-}
-#checkbox:checked ~ .menu-btt {
-    opacity: 0;
-}
-.menu-btt:focus {
-    font-size: 50px;
+.bookmark-btt {
+    border: none;
+    background-color: transparent;
+    font-size: 3rem;
 }
 section {
     background-color: #34495e;
@@ -52,10 +45,3 @@ section {
     text-decoration: none;
 }
 
-.bookmark-btt {
-    border: none;
-    background-color: transparent;
-}
-.bookmark-btt:focus {
-    color: red;
-}
